<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#304769">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#ccc"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="50dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_lock_outline_white" />

            <EditText
                android:id="@+id/etLoginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:padding="10dp"
                tools:ignore="Autofill" />


            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#f05924"
                android:text="@string/sign_in"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/not_having_account"
                android:textColor="#F8F4F4" />

            <Button
                android:id="@+id/btnLoginRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#aaa"
                android:text="@string/register"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            app:indicatorSize="60dp"
            app:trackThickness="5dp"
            app:trackColor="@color/black"
            app:indicatorColor="@color/purple_700"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:progress="80"
            app:trackCornerRadius="8dp"
            android:layout_marginTop="30dp"/>
    </RelativeLayout>
</layout>